--- a/docs/alignment/align.ipynb
+++ b/docs/alignment/align.ipynb
@@ -32,15 +32,14 @@
     "\n",
     "import numpy as np\n",
     "from dotenv import load_dotenv\n",
+    "from hloc.visualization import visualize_loc_from_log\n",
     "from matplotlib import pyplot as plt\n",
     "from rich import print\n",
     "\n",
     "from collab_env.alignment import align\n",
     "from collab_env.data.file_utils import expand_path, get_project_root\n",
     "from collab_env.data.gcs_utils import GCSClient\n",
-    "from collab_env.utils import visualization as viz\n",
-    "\n",
-    "from hloc.visualization import visualize_loc_from_log\n"
+    "from collab_env.utils import visualization as viz"
    ]
   },
   {
@@ -192,24 +191,20 @@
     "required_files = [\n",
     "    f\"aligned_frames/{camera_id}/adjusted_{camera_id}.mp4\",\n",
     "    f\"aligned_frames/{camera_id}/{camera_id}_tracked_bboxes.csv\",\n",
-    "    f\"environment/{splat_video}/preproc/colmap/\", # entire folder\n",
-    "    f\"environment/{splat_video}/preproc/images/\", # entire folder\n",
-    "    f\"environment/{splat_video}/rade-features/mesh/\", # entire folder\n",
-    "    f\"environment/{splat_video}/rade-features/2025-07-25_040743/dataparser_transforms.json\"\n",
+    "    f\"environment/{splat_video}/preproc/colmap/\",  # entire folder\n",
+    "    f\"environment/{splat_video}/preproc/images/\",  # entire folder\n",
+    "    f\"environment/{splat_video}/rade-features/mesh/\",  # entire folder\n",
+    "    f\"environment/{splat_video}/rade-features/2025-07-25_040743/dataparser_transforms.json\",\n",
     "]\n",
     "\n",
     "# download all files/folders (check if folder by trailing slash)\n",
     "for item in required_files:\n",
     "    if item.endswith(\"/\"):\n",
     "        gcs_client.download_folder(\n",
-    "            f\"{current_session_dir}/{item}\",\n",
-    "            local_out_dir / item\n",
+    "            f\"{current_session_dir}/{item}\", local_out_dir / item\n",
     "        )\n",
     "    else:\n",
-    "        gcs_client.download_file(\n",
-    "            f\"{current_session_dir}/{item}\",\n",
-    "            local_out_dir / item\n",
-    "        )"
+    "        gcs_client.download_file(f\"{current_session_dir}/{item}\", local_out_dir / item)"
    ]
   },
   {
@@ -577,7 +572,7 @@
    "source": [
     "gcs_client.upload_folder(\n",
     "    local_path=local_out_dir / \"aligned_splat/\",\n",
-    "    gcs_path=f\"{current_session_dir}/aligned_splat\"\n",
+    "    gcs_path=f\"{current_session_dir}/aligned_splat\",\n",
     ")"
    ]
   },
@@ -708,7 +703,7 @@
     "    view_image=view_image,\n",
     "    frame=frame,\n",
     "    result=result,\n",
-    ")\n"
+    ")"
    ]
   },
   {
