--- a/docs/alignment/reprojection.ipynb
+++ b/docs/alignment/reprojection.ipynb
@@ -30,18 +30,19 @@
     "import pickle\n",
     "from copy import deepcopy\n",
     "from pathlib import Path\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pyvista as pv\n",
-    "from matplotlib.pyplot import cm\n",
-    "from tqdm import tqdm\n",
-    "from rich import print\n",
     "from dotenv import load_dotenv\n",
-    "from collab_env.data.gcs_utils import GCSClient\n",
-    "from collab_env.data.file_utils import expand_path, get_project_root\n",
+    "from matplotlib.pyplot import cm\n",
+    "from rich import print\n",
+    "from tqdm import tqdm\n",
     "\n",
     "from collab_env.alignment import reprojection\n",
+    "from collab_env.data.file_utils import expand_path, get_project_root\n",
+    "from collab_env.data.gcs_utils import GCSClient\n",
     "from collab_env.utils import visualization as viz"
    ]
   },
@@ -521,7 +522,9 @@
     }
    ],
    "source": [
-    "tracks_3d_fname_local =  f\"aligned_frames/{camera_id}/{camera_id}_tracked_centroids_3d.csv\"\n",
+    "tracks_3d_fname_local = (\n",
+    "    f\"aligned_frames/{camera_id}/{camera_id}_tracked_centroids_3d.csv\"\n",
+    ")\n",
     "df_projected_tracks.to_csv(session_data_dir / tracks_3d_fname_local)\n",
     "\n",
     "print(f\"Saved 3D tracks to {session_data_dir / tracks_3d_fname_local}\")"
@@ -576,7 +579,7 @@
     "\n",
     "gcs_client.upload_file(\n",
     "    session_data_dir / tracks_3d_fname_local,\n",
-    "    f\"{data_type}/{session}/aligned_frames/{camera_id}/\"\n",
+    "    f\"{data_type}/{session}/aligned_frames/{camera_id}/\",\n",
     ")"
    ]
   },
