batch and run many models

--- a/docs/gnn/0c-Simulate_Boid_wFood.ipynb
+++ b/docs/gnn/0c-Simulate_Boid_wFood.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "id": "22e702ab-7020-4557-b6d4-c0bfad9bfa37",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "id": "8f3c1db9",
    "metadata": {
     "scrolled": true
@@ -112,7 +112,7 @@
     "          \"margin\":20, #0.05, 25\n",
     "          \"turn_factor\":4,\n",
     "          \"speed_limit\":7,\n",
-    "          \"food_factor\": 0.05,\n",
+    "          \"food_factor\": 0.15, #0.05\n",
     "          \"food_visual_range\": 200,\n",
     "          \"food_eating_range\": 20,\n",
     "          \"food_time\": 300,\n",
@@ -132,8 +132,8 @@
     "                              seed = 2025\n",
     "                              )\n",
     "\n",
-    "file_name = 'boid_food_basic_alignment.pt'\n",
-    "config_name = 'boid_food_basic_alignment_config.pt'\n",
+    "file_name = 'boid_food_strong.pt'\n",
+    "config_name = 'boid_food_strong_config.pt'\n",
     "\n",
     "\n",
     "torch.save(dataset, expand_path(\n",
