--- a/docs/gnn/1-TrainBasicGNN.ipynb
+++ b/docs/gnn/1-TrainBasicGNN.ipynb
@@ -107,16 +107,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 127,
    "id": "2599830c-3e1f-430d-b6e6-6249921eac90",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/workspace/conda/envs/gnn/lib/python3.13/site-packages/torch_geometric/deprecation.py:26: UserWarning: 'data.DataLoader' is deprecated, use 'loader.DataLoader' instead\n",
+      "  warnings.warn(out)\n"
+     ]
+    }
+   ],
    "source": [
     "data_names = ['boid_single_species_basic', 'boid_single_species_independent', # without food\n",
     "              'boid_food_basic_alignment', 'boid_food_basic_independent', # with food\n",
     "              'boid_food_strong'] # with food, strong influence\n",
     "\n",
-    "batch_size = 5\n",
+    "BATCH_SIZE = 10\n",
     "data = {}\n",
     "\n",
     "for data_name in data_names:\n",
@@ -152,12 +161,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 128,
    "id": "57305ffe-962e-4207-b15f-4442d98ad46f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_specs(data_name, model_name, batch_size,\n",
+    "def make_specs(data_name, model_name,\n",
     "               noise_level, head, visual_range, epoch):\n",
     "    \"\"\"\n",
     "    data_name: name of the dataset\n",
@@ -210,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 129,
    "id": "b031825c-acbc-491e-b85a-696a978ede53",
    "metadata": {},
    "outputs": [],
@@ -238,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 130,
    "id": "4aeafe19",
    "metadata": {
     "scrolled": true
@@ -275,42 +284,19 @@
     "    #    models[m][\"debug_result\"], train_loader, visual_range\n",
     "    #)\n",
     "\n",
-    "    gnn_model = models[m][\"model\"]\n",
-    "    noise_level = train_spec[m][\"sigma\"]\n",
+    "    gnn_model = result[\"model\"]\n",
+    "    noise_level = train_spec[\"sigma\"]\n",
     "        \n",
     "    file_name = f\"{data_name}_{m}_{save_name_postfix}_seed{seed}\"\n",
     "    save_model(result[\"model\"], model_spec, train_spec, file_name)\n",
+    "    \n",
+    "    return np.sum(result[\"train_losses\"])\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "3c834b2b-65a9-47c8-8e62-8f134b472162",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['boid_single_species_basic',\n",
-       " 'boid_single_species_independent',\n",
-       " 'boid_food_basic_alignment',\n",
-       " 'boid_food_basic_independent',\n",
-       " 'boid_food_strong']"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "5c634751-2d2c-4c4a-9733-d5fa04052e30",
    "metadata": {
     "scrolled": true
@@ -325,41 +311,6 @@
       "\n",
       "batch 0\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<string>:4: RuntimeWarning: invalid value encountered in divide\n",
-      "<string>:74: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.detach().clone() or sourceTensor.detach().clone().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "/workspace/collab-environment/collab_env/gnn/gnn.py:296: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.detach().clone() or sourceTensor.detach().clone().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  x_input = x_input.to(device)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "batch 1\n",
-      "\n",
-      "\n",
-      "batch 2\n",
-      "\n",
-      "\n",
-      "batch 3\n",
-      "\n",
-      "\n",
-      "batch 4\n",
-      "\n",
-      "\n",
-      "Epoch 000 | Train: 0.0051\n",
-      "epoch 1\n",
-      "\n",
-      "\n",
-      "batch 0\n",
-      "\n",
       "\n",
       "batch 1\n",
       "\n",
@@ -373,21 +324,29 @@
       "batch 4\n",
       "\n",
       "\n",
-      "epoch 2\n",
+      "Epoch 000 | Train: 0.0031\n",
+      "Saved model to /workspace/collab-environment/trained_models/boid_single_species_basic_vpluspplus_a_noise0_head1_visual_range0.2_seed0.pt.\n",
+      "epoch 0\n",
       "\n",
       "\n",
       "batch 0\n",
       "\n",
-      "\n",
-      "batch 1\n",
-      "\n",
-      "\n",
-      "batch 2\n",
-      "\n",
-      "\n",
-      "batch 3\n",
-      "\n",
       "\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[126]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m     14\u001b[39m save_name_postfix = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mnoise\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnoise\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m_head\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhead\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m_visual_range\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvisual_range\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m     16\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m seed \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(SEED_NUM):\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m     loss = \u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43mdata_name\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_spec\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_spec\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mseed\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msave_name_postfix\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[123]\u001b[39m\u001b[32m, line 19\u001b[39m, in \u001b[36mtrain\u001b[39m\u001b[34m(data, model_spec, train_spec, seed, save_name_postfix)\u001b[39m\n\u001b[32m     14\u001b[39m species_dim = \u001b[38;5;28mlen\u001b[39m(data[\u001b[33m'\u001b[39m\u001b[33mspecies_configs\u001b[39m\u001b[33m'\u001b[39m].keys())\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m# train models\u001b[39;00m\n\u001b[32m     18\u001b[39m (result[\u001b[33m\"\u001b[39m\u001b[33mtrain_losses\u001b[39m\u001b[33m\"\u001b[39m], result[\u001b[33m\"\u001b[39m\u001b[33mmodel\u001b[39m\u001b[33m\"\u001b[39m], result[\u001b[33m\"\u001b[39m\u001b[33mdebug_result\u001b[39m\u001b[33m\"\u001b[39m]) = (\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m     \u001b[43mtrain_rules_gnn\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     20\u001b[39m \u001b[43m        \u001b[49m\u001b[43mgnn_model\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     21\u001b[39m \u001b[43m        \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     22\u001b[39m \u001b[43m        \u001b[49m\u001b[43mspecies_dim\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mspecies_dim\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     23\u001b[39m \u001b[43m        \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mtrain_spec\u001b[49m\n\u001b[32m     24\u001b[39m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     25\u001b[39m     )\n\u001b[32m     27\u001b[39m \u001b[38;5;66;03m#models[m][\"W_input\"], models[m][\"W_output\"] = get_adjcency_from_debug(\u001b[39;00m\n\u001b[32m     28\u001b[39m \u001b[38;5;66;03m#    models[m][\"debug_result\"], train_loader, visual_range\u001b[39;00m\n\u001b[32m     29\u001b[39m \u001b[38;5;66;03m#)\u001b[39;00m\n\u001b[32m     31\u001b[39m gnn_model = result[\u001b[33m\"\u001b[39m\u001b[33mmodel\u001b[39m\u001b[33m\"\u001b[39m]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/workspace/collab-environment/collab_env/gnn/gnn.py:571\u001b[39m, in \u001b[36mtrain_rules_gnn\u001b[39m\u001b[34m(model, dataloader, visual_range, epochs, lr, training, full_frames, species_dim, sigma, device, aux_data, rollout, rollout_everyother, ablate_boid_interaction)\u001b[39m\n\u001b[32m    567\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    569\u001b[39m     S, Frame, N, _ = position.shape\n\u001b[32m--> \u001b[39m\u001b[32m571\u001b[39m     (loss, debug_result_all[ep][batch_idx], model) = \u001b[43mrun_gnn\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    572\u001b[39m \u001b[43m        \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    573\u001b[39m \u001b[43m        \u001b[49m\u001b[43mposition\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    574\u001b[39m \u001b[43m        \u001b[49m\u001b[43mspecies_idx\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    575\u001b[39m \u001b[43m        \u001b[49m\u001b[43mspecies_dim\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    576\u001b[39m \u001b[43m        \u001b[49m\u001b[43mvisual_range\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mvisual_range\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    577\u001b[39m \u001b[43m        \u001b[49m\u001b[43msigma\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43msigma\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    578\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    579\u001b[39m \u001b[43m        \u001b[49m\u001b[43mtraining\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mtraining\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    580\u001b[39m \u001b[43m        \u001b[49m\u001b[43mlr\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mlr\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    581\u001b[39m \u001b[43m        \u001b[49m\u001b[43mfull_frames\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mfull_frames\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    582\u001b[39m \u001b[43m        \u001b[49m\u001b[43mrollout\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mrollout\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    583\u001b[39m \u001b[43m        \u001b[49m\u001b[43mrollout_everyother\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mrollout_everyother\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    584\u001b[39m \u001b[43m        \u001b[49m\u001b[43mablate_boid_interaction\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mablate_boid_interaction\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    586\u001b[39m     train_losses_by_batch.append(loss)\n\u001b[32m    588\u001b[39m train_losses.append(train_losses_by_batch)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m<string>:73\u001b[39m, in \u001b[36mrun_gnn\u001b[39m\u001b[34m(model, position, species_idx, species_dim, visual_range, sigma, device, training, lr, debug_result, full_frames, rollout, rollout_everyother, ablate_boid_interaction)\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m<string>:8\u001b[39m, in \u001b[36mnormalize_by_col\u001b[39m\u001b[34m(N, batch_num, edge_index, return_matrix)\u001b[39m\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
@@ -395,45 +354,90 @@
     "model_names = [\"vpluspplus_a\", \"lazy\"]\n",
     "noise_levels = [0, 0.005]\n",
     "heads = [1, 2, 3]\n",
-    "visual_ranges = [0.1, 0.5]\n",
+    "visual_ranges = [0.2, 0.5]\n",
     "\n",
     "all_combinations = list(product(data_names, model_name, noise_levels, heads, visual_ranges))\n",
     "\n",
-    "BATCH_SIZE = 4\n",
-    "EPOCH = 20\n",
+    "EPOCH = 1 #20\n",
     "SEED_NUM = 5\n",
     "\n",
-    "for (data_name, model_name, noise, head, visual_range) in all_combinations:\n",
+    "for (data_name, model_name, noise, head, visual_range) in all_combinations[:1]:\n",
     "    model_spec, train_spec = make_specs(data_name, model_name,\n",
-    "                                                BATCH_SIZE,\n",
-    "                                                noise, head, visual_range, EPOCH)\n",
+    "                                        noise, head, visual_range, EPOCH)\n",
     "    save_name_postfix = f\"noise{noise}_head{head}_visual_range{visual_range}\"\n",
     "    \n",
     "    for seed in range(SEED_NUM):\n",
-    "        train(data[data_name], model_spec, train_spec, seed, save_name_postfix)\n",
+    "        loss = train(data[data_name], model_spec, train_spec, seed, save_name_postfix)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "id": "3d737210-d2ca-4a64-8137-f75d4868e7ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'result' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[117]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mresult\u001b[49m[\u001b[33m\"\u001b[39m\u001b[33mtrain_losses\u001b[39m\u001b[33m\"\u001b[39m].shape\n",
+      "\u001b[31mNameError\u001b[39m: name 'result' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "!nvi"
+    "result[\"train_losses\"].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 121,
    "id": "9b12f3ea-10cd-4c37-a5e2-4f1b6f65916e",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> \u001b[32m/tmp/ipykernel_13766/1118675509.py\u001b[39m(\u001b[92m37\u001b[39m)\u001b[36mtrain\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[32m     35\u001b[39m     save_model(result[\u001b[33m\"model\"\u001b[39m], model_spec, train_spec, file_name)\n",
+      "\u001b[32m     36\u001b[39m \n",
+      "\u001b[32m---> 37\u001b[39m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[32m1\u001b[39m == \u001b[32m0\u001b[39m\n",
+      "\u001b[32m     38\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m np.sum(result[\u001b[33m\"train_losses\"\u001b[39m])\n",
+      "\u001b[32m     39\u001b[39m \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ipdb>  np.sum(result[\"train_losses\"])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np.float64(0.025376585848366773)\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ipdb>  exit\n"
+     ]
+    }
+   ],
    "source": [
-    "#%debug"
+    "%debug"
    ]
   },
   {
