--- a/figures/gnn/E. avoidance.ipynb
+++ b/figures/gnn/E. avoidance.ipynb
@@ -5,7 +5,7 @@
    "id": "7c5bb2dc-55b3-4722-8d3f-c4ec6818e5b2",
    "metadata": {},
    "source": [
-    "# Figure 6C: Plot position displacement.\n",
+    "# Figure 6E: Plot boid-boid avoidance.\n",
     "\n",
     "We plot the relationship between position displacement between a boid and flock and its subsequent velocity(t+1)."
    ]
