--- a/docs/gnn/1-TrainBasicGNN.ipynb
+++ b/docs/gnn/1-TrainBasicGNN.ipynb
@@ -29,14 +29,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import sys\n",
+    "# import os\n",
+    "# import sys\n",
     "\n",
-    "script_path = os.path.realpath(os.path.dirname(__name__))\n",
-    "os.chdir(script_path)\n",
-    "sys.path.append(\"/workspace/collab-environment/\")\n",
-    "sys.path.append(\"/workspace/collab-environment/collab_env/gnn\")\n",
-    "sys.path.append(\"/workspace/collab-environment/collab_env/data/boids\")"
+    "# script_path = os.path.realpath(os.path.dirname(__name__))\n",
+    "# os.chdir(script_path)\n",
+    "# sys.path.append(\"/workspace/collab-environment/\")\n",
+    "# sys.path.append(\"/workspace/collab-environment/collab_env/gnn\")\n",
+    "# sys.path.append(\"/workspace/collab-environment/collab_env/data/boids\")"
    ]
   },
   {
@@ -67,20 +67,7 @@
    "execution_count": 4,
    "id": "4cad07db",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'gnn_definition'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mcollab_env\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgnn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgnn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_adjcency_from_debug, plot_log_loss, train_rules_gnn, load_model, save_model, debug_result2prediction\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mcollab_env\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgnn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgnn_definition\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GNN, Lazy\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mcollab_env\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mboids\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01manimal_simulation\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m visualize_graph_2sets\n",
-      "File \u001b[0;32m~/git/collab-environment/collab_env/gnn/gnn.py:8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mcollab_env\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgnn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutility\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m handle_discrete_data, v_function_2_vminushalf\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgc\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgnn_definition\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GNN, Lazy\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mcollab_env\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfile_utils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m expand_path, get_project_root\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mbuild_edge_index\u001b[39m(positions, visual_range):\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'gnn_definition'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collab_env.gnn.gnn import get_adjcency_from_debug, plot_log_loss, train_rules_gnn, load_model, save_model, debug_result2prediction\n",
     "from collab_env.gnn.gnn_definition import GNN, Lazy\n",
@@ -111,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2599830c-3e1f-430d-b6e6-6249921eac90",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_names = ['boid_single_species_basic', 'boid_single_species_independent', # without food\n",
-    "              'boid_food_basic_alignment', 'boid_food_basic_independent', # with food\n",
+    "              'boid_food_basic', 'boid_food_medium_independent', # with food\n",
     "              'boid_food_strong'] # with food, strong influence\n",
     "\n",
-    "batch_size = 5\n",
+    "batch_size = 100\n",
     "data = {}\n",
     "\n",
     "for data_name in data_names:\n",
@@ -156,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "57305ffe-962e-4207-b15f-4442d98ad46f",
    "metadata": {},
    "outputs": [],
@@ -214,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b031825c-acbc-491e-b85a-696a978ede53",
    "metadata": {},
    "outputs": [],
@@ -279,85 +266,108 @@
     "    #    models[m][\"debug_result\"], train_loader, visual_range\n",
     "    #)\n",
     "\n",
-    "    gnn_model = models[m][\"model\"]\n",
-    "    noise_level = train_spec[m][\"sigma\"]\n",
+    "    gnn_model = result[\"model\"]\n",
+    "    noise_level = train_spec[\"sigma\"]\n",
     "        \n",
     "    file_name = f\"{data_name}_{m}_{save_name_postfix}_seed{seed}\"\n",
-    "    save_model(result[\"model\"], model_spec, train_spec, file_name)\n",
+    "    save_model(gnn_model, model_spec, train_spec, file_name)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3c834b2b-65a9-47c8-8e62-8f134b472162",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['boid_single_species_basic',\n",
+       " 'boid_single_species_independent',\n",
+       " 'boid_food_basic',\n",
+       " 'boid_food_medium_independent',\n",
+       " 'boid_food_strong']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5c634751-2d2c-4c4a-9733-d5fa04052e30",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-08-23 12:18:29.698\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m600\u001b[0m - \u001b[34m\u001b[1mStarting epoch 1/2\u001b[0m\n",
+      "\u001b[32m2025-08-23 12:18:29.704\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 1/2 | Processing batch 1/7\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training boid_single_species_basic with vpluspplus_a with 0 noise, 1 heads, 0.5 visual range\n",
+      "Training boid_single_species_basic with vpluspplus_a with 0 noise, 1 heads, 0.5 visual range, seed 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-08-23 12:18:57.974\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 1/2 | Processing batch 2/7\u001b[0m\n",
+      "\u001b[32m2025-08-23 12:19:25.002\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 1/2 | Processing batch 3/7\u001b[0m\n",
+      "\u001b[32m2025-08-23 12:19:52.273\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 1/2 | Processing batch 4/7\u001b[0m\n",
+      "\u001b[32m2025-08-23 12:20:19.620\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 1/2 | Processing batch 5/7\u001b[0m\n",
+      "\u001b[32m2025-08-23 12:20:47.164\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 1/2 | Processing batch 6/7\u001b[0m\n",
+      "\u001b[32m2025-08-23 12:21:14.523\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 1/2 | Processing batch 7/7\u001b[0m\n",
+      "\u001b[32m2025-08-23 12:21:41.858\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m632\u001b[0m - \u001b[34m\u001b[1mEpoch 000 | Train loss: 0.0008388\u001b[0m\n",
+      "\u001b[32m2025-08-23 12:21:41.859\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m600\u001b[0m - \u001b[34m\u001b[1mStarting epoch 2/2\u001b[0m\n",
+      "\u001b[32m2025-08-23 12:21:41.863\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 2/2 | Processing batch 1/7\u001b[0m\n",
+      "\u001b[32m2025-08-23 12:22:10.214\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 2/2 | Processing batch 2/7\u001b[0m\n",
+      "\u001b[32m2025-08-23 12:22:38.068\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 2/2 | Processing batch 3/7\u001b[0m\n",
+      "\u001b[32m2025-08-23 12:23:05.355\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 2/2 | Processing batch 4/7\u001b[0m\n",
+      "\u001b[32m2025-08-23 12:23:33.889\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 2/2 | Processing batch 5/7\u001b[0m\n",
+      "\u001b[32m2025-08-23 12:24:08.112\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 2/2 | Processing batch 6/7\u001b[0m\n",
+      "\u001b[32m2025-08-23 12:24:43.593\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 2/2 | Processing batch 7/7\u001b[0m\n",
+      "\u001b[32m2025-08-23 12:25:18.543\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m632\u001b[0m - \u001b[34m\u001b[1mEpoch 001 | Train loss: 0.0003512\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "model_names = [\"vpluspplus_a\", \"lazy\"]\n",
-    "noise_levels = [0, 0.005]\n",
-    "heads = [1, 2, 3]\n",
-    "visual_ranges = [0.1, 0.5]\n",
+    "model_names = [\"vpluspplus_a\"]\n",
+    "noise_levels = [0]\n",
+    "heads = [1]\n",
+    "visual_ranges = [0.5]\n",
     "\n",
-    "all_combinations = list(product(data_names, model_name, noise_levels, heads, visual_ranges))\n",
+    "all_combinations = list(product(data_names, model_names, noise_levels, heads, visual_ranges))\n",
     "\n",
-    "BATCH_SIZE = 4\n",
-    "EPOCH = 20\n",
-    "SEED_NUM = 5\n",
+    "BATCH_SIZE = 50\n",
+    "EPOCH = 2\n",
+    "SEED_NUM = 1\n",
     "\n",
-    "for (data_name, model_name, noise, head, visual_range) in all_combinations:\n",
+    "for (data_name, model_name, noise, head, visual_range) in all_combinations[:1]:\n",
     "    model_spec, train_spec = make_specs(data_name, model_name,\n",
     "                                                BATCH_SIZE,\n",
     "                                                noise, head, visual_range, EPOCH)\n",
     "    save_name_postfix = f\"noise{noise}_head{head}_visual_range{visual_range}\"\n",
-    "    \n",
+    "    print(f\"Training {data_name} with {model_name} with {noise} noise, {head} heads, {visual_range} visual range\")\n",
     "    for seed in range(SEED_NUM):\n",
+    "        print(f\"Training {data_name} with {model_name} with {noise} noise, {head} heads, {visual_range} visual range, seed {seed}\")\n",
     "        train(data[data_name], model_spec, train_spec, seed, save_name_postfix)\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d737210-d2ca-4a64-8137-f75d4868e7ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!nvi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b12f3ea-10cd-4c37-a5e2-4f1b6f65916e",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#%debug"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed639484-28ee-4460-bd8f-fbeb11539137",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"done\")"
    ]
   },
   {
@@ -924,7 +934,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv-310",
    "language": "python",
    "name": "python3"
   },
@@ -938,7 +948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
